--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,12 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: 104.21.54.252
-    port: 8080
+    server: 104.22.51.162
+    port: 80
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -19,11 +19,26 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.velvetmountain.shop
+        host: my1.tooters.ir
   - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: 172.67.253.239
+    server: 104.20.231.30
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id003
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    type: vmess
+    server: 104.16.77.74
     port: 80
     cipher: auto
     uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
@@ -35,19 +50,82 @@ proxies:
       path: /?ed=2048
       headers:
         host: my1.tooters.ir
-  - &id003
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
+  - &id004
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
+    type: vmess
+    server: for-irancell.outline-vpn.cloud
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /argox-tr
-  - &id004
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id005
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
+    type: vmess
+    server: 172.67.253.230
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id006
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_6
+    type: vmess
+    server: 104.24.208.37
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id007
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_7
+    type: vmess
+    server: 104.21.69.44
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: a.prapt4.ir
+  - &id008
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 188.114.96.113
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: a.prapt4.ir
+  - &id009
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -62,7 +140,7 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id005
+  - &id010
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 172.67.130.140
@@ -77,75 +155,6 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: it-full.privateip.net
-    port: 443
-    udp: true
-    password: 915dc116-70c6-403b-8a03-18d885c311bf
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: 172.67.253.71
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: my1.tooters.ir
-  - &id008
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: www.brightocean.lol
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.brightocean.lol
-  - &id009
-    name: 🇫🇷_FR_法国->🇬🇧_GB_英国
-    type: vmess
-    server: 57.128.173.202
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: internet.life.com.by
-  - &id010
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
-    type: vmess
-    server: 172.67.253.105
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: my1.tooters.ir
   - &id011
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
@@ -162,203 +171,74 @@ proxies:
       headers:
         host: s1c.v2.v001sss.xyz
   - &id012
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: www.ywnouvbale.biz
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.ywnouvbale.biz
+    name: 🇧🇷_BR_巴西
+    type: ss
+    server: 152.67.41.90
+    port: 7703
+    password: 86379168-47dd-4fc3-a2d7-5183802487f6
+    cipher: aes-256-gcm
   - &id013
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
-    type: vmess
-    server: 172.67.253.243
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: my1.tooters.ir
-  - &id014
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
-    type: vmess
-    server: de-01.cloudlion.me
-    port: 8080
-    cipher: auto
-    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: de-01.cloudlion.me
-  - &id015
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 172.67.217.144
-    port: 80
-    cipher: auto
-    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lv1.xv2ray.net
-  - &id016
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_6
-    type: vmess
-    server: 172.67.253.158
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: my1.tooters.ir
-  - &id017
-    name: 🇺🇸_US_美国_6
-    type: trojan
-    server: 95.164.46.235
-    port: 443
-    udp: true
-    password: 915dc116-70c6-403b-8a03-18d885c311bf
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_7
-    type: vmess
-    server: 172.67.253.221
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: my1.tooters.ir
-  - &id019
-    name: 🇺🇸_US_美国->🇯🇵_JP_日本
-    type: vmess
-    server: 104.17.123.55
-    port: 8080
-    cipher: auto
-    uuid: 1d47288a-699d-45ca-b4f0-4e5b36940e6f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qZTtpya?ed=2048
-      headers:
-        host: pq.kmoljklj.top
-  - &id020
-    name: 🇺🇸_US_美国_7
-    type: trojan
-    server: 95.164.114.43
-    port: 443
-    udp: true
-    password: 180c7f40-c29e-445d-8056-ae92f3b451d7
-    sni: kz-full.privateip.net
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.144.2.113
-    port: 80
-    cipher: auto
-    uuid: 88bd03e6-5ada-42da-9e77-448cd8c60e13
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id022
-    name: 🇺🇸_US_美国_8
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: cfcdn1.sanfencdn9.com
-    port: 8880
+    port: 2086
     cipher: auto
-    uuid: de6969ab-ec16-4263-8c11-9187e8ca0782
+    uuid: 9c4723d9-29e7-4502-a021-7c79355cb7e1
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /video/bYdJ7Vc2We
+      path: /video/Z7qdcrAGRw
       headers:
-        host: us6gzxQRrE4.fzbqfrse.xyz
-  - &id023
-    name: 🇺🇸_US_美国_9
+        host: us77SmSk86j.fzbqfrse.xyz
+  - &id014
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 162.159.130.208
-    port: 8080
+    server: 104.16.35.48
+    port: 2086
     cipher: auto
-    uuid: 53329cdb-8a9e-4ab9-8391-d3e628140c76
+    uuid: 9c4723d9-29e7-4502-a021-7c79355cb7e1
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 53329cdb-8a9e-4ab9-8391-d3e628140c76-vm
+      path: /video/Z7qdcrAGRw
       headers:
-        host: widescreen-instruction-breakdown-postage.trycloudflare.com
-  - &id024
-    name: 🇺🇸_US_美国_10
-    type: ss
-    server: 54.202.3.34
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id025
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: ss
-    server: service.ouluyun9803.com
-    port: 21003
-    password: cfa17a0d-5e7d-4871-976e-f116e0818123
-    cipher: chacha20-ietf-poly1305
-  - &id026
-    name: 🇺🇸_US_美国_11
+        host: us77SmSk86j.fzbqfrse.xyz
+  - &id015
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 172.64.141.3
-    port: 80
+    server: 104.19.91.152
+    port: 2086
     cipher: auto
-    uuid: 1cfaad16-d2ba-4c49-af07-d7b9f11f43d0
+    uuid: 9c4723d9-29e7-4502-a021-7c79355cb7e1
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /xn--mes53ddysu0o3gl
+      path: /video/Z7qdcrAGRw
       headers:
-        host: newus2.xn--mes53ddysu0o3gl.top
-  - &id027
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_8
+        host: us77SmSk86j.fzbqfrse.xyz
+  - &id016
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 172.64.150.65
+    port: 2095
+    cipher: auto
+    uuid: bdede9d3-68c4-4bb1-8ad1-9a8eb07ff76f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/qYZue4zaWS
+      headers:
+        host: us82pRzxDMb.fzbqfrse.xyz
+  - &id017
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 104.21.225.251
     port: 80
@@ -372,15 +252,18 @@ proxies:
       path: /
       headers:
         host: a.prapt5.ir
-  - &id028
-    name: 🇺🇸_US_美国_12
+  - &id018
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
     type: trojan
-    server: kz-full.privateip.net
+    server: 23.227.38.11
     port: 443
     udp: true
-    password: 180c7f40-c29e-445d-8056-ae92f3b451d7
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /argox-tr
 proxy-groups:
   - name: PROXY
     type: select
@@ -425,16 +308,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -458,16 +331,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
   - name: SELECT
     type: select
     proxies:
@@ -489,16 +352,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
