--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,97 +6,7 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 104.22.51.162
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: 104.20.231.30
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id003
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
-    type: vmess
-    server: 104.16.77.74
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: my1.tooters.ir
-  - &id004
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
-    type: vmess
-    server: for-irancell.outline-vpn.cloud
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id005
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
-    type: vmess
-    server: 172.67.253.230
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id006
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_6
-    type: vmess
-    server: 104.24.208.37
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id007
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_7
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
     server: 104.21.69.44
     port: 80
@@ -110,7 +20,7 @@ proxies:
       path: /
       headers:
         host: a.prapt4.ir
-  - &id008
+  - &id002
     name: 🇳🇱_NL_荷兰
     type: vmess
     server: 188.114.96.113
@@ -125,7 +35,7 @@ proxies:
       path: /
       headers:
         host: a.prapt4.ir
-  - &id009
+  - &id003
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -140,7 +50,19 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id010
+  - &id004
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
+  - &id005
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 172.67.130.140
@@ -155,7 +77,7 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id011
+  - &id006
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: s1c.v2.v001sss.xyz
@@ -170,100 +92,18 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id012
-    name: 🇧🇷_BR_巴西
-    type: ss
-    server: 152.67.41.90
-    port: 7703
-    password: 86379168-47dd-4fc3-a2d7-5183802487f6
-    cipher: aes-256-gcm
-  - &id013
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2086
-    cipher: auto
-    uuid: 9c4723d9-29e7-4502-a021-7c79355cb7e1
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/Z7qdcrAGRw
-      headers:
-        host: us77SmSk86j.fzbqfrse.xyz
-  - &id014
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 104.16.35.48
-    port: 2086
-    cipher: auto
-    uuid: 9c4723d9-29e7-4502-a021-7c79355cb7e1
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/Z7qdcrAGRw
-      headers:
-        host: us77SmSk86j.fzbqfrse.xyz
-  - &id015
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.19.91.152
-    port: 2086
-    cipher: auto
-    uuid: 9c4723d9-29e7-4502-a021-7c79355cb7e1
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/Z7qdcrAGRw
-      headers:
-        host: us77SmSk86j.fzbqfrse.xyz
-  - &id016
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 172.64.150.65
-    port: 2095
-    cipher: auto
-    uuid: bdede9d3-68c4-4bb1-8ad1-9a8eb07ff76f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/qYZue4zaWS
-      headers:
-        host: us82pRzxDMb.fzbqfrse.xyz
-  - &id017
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 104.21.225.251
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a.prapt5.ir
-  - &id018
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+  - &id007
+    name: 🇮🇪_IE_爱尔兰
     type: trojan
-    server: 23.227.38.11
-    port: 443
+    server: 52.48.93.169
+    port: 22222
     udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argox-tr
+    network: tcp
+    alpn:
+      - http/1.1
 proxy-groups:
   - name: PROXY
     type: select
@@ -297,17 +137,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -320,17 +149,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
   - name: SELECT
     type: select
     proxies:
@@ -341,17 +159,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
